<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_base</name>
  <version>2.4.0</version>
  <description>CLOiSim-ROS base class for other CLOiSim-ROS</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cloisim_ros_protobuf_msgs</build_depend>
  <build_depend>cloisim_ros_bridge_zmq</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cloisim_ros_protobuf_msgs</exec_depend>
  <exec_depend>cloisim_ros_bridge_zmq</exec_depend>

  <depend>protobuf-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
