<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_base</name>
  <version>2.12.2</version>
  <description>CLOiSim-ROS base class for other CLOiSim-ROS</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cloisim_ros_protobuf_msgs</depend>
  <depend>cloisim_ros_bridge_zmq</depend>
  <depend>geometry_msgs</depend>

  <depend>protobuf-dev</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
