<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_bridge_zmq</name>
  <version>4.2.1</version>
  <description>bridge for cloisim(simulator) connection through ZMQ</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <license>MIT</license>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libzmq3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>