<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_bringup_param</name>
  <version>3.1.2</version>
  <description>Bringup scripts and configurations for cloisim_ros</description>

  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cloisim_ros_websocket_service</depend>

  <depend>libjsoncpp-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
