<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_camera</name>
  <version>3.13.0</version>
  <description>Virtual camera/depth camera/segmentation camera for CLOiSim</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <license>MIT</license>

  <author email="sungkyu.kang@lge.com">Sungkyu Kang</author>
  <author email="ljm6525@gmail.com">Jaemin Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cloisim_ros_bringup_param</depend>
  <depend>cloisim_ros_base</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>